--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -140,7 +140,7 @@
 				shot.update();
 			}
 
-			// Remove entities that are too far from player (memory leak fix)
+			// Remove entities that are too far from player (avoid memory leak)
 			const despawnDistance = Math.max(canvas.width, canvas.height) * 2;
 			aliens = aliens.filter(alien => {
 				const distance = alien.sprite.position.dist(player.sprite.position);
